2008-09-29  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* configure.ac:
	* src/murrine_draw.c (murrine_draw_menubar),
	(murrine_draw_toolbar), (murrine_draw_separator):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_menubar),
	(murrine_rgba_draw_toolbar), (murrine_rgba_draw_separator):
	Removed --enable-macmenu. You can use other options.

2008-09-29  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c (murrine_draw_curved_highlight),
	(murrine_draw_curved_highlight_top),
	(murrine_draw_curved_highlight_bottom), (murrine_draw_glaze):
	* src/cairo-support.h:
	* src/murrine_draw.c (murrine_draw_button),
	(murrine_draw_progressbar_fill), (murrine_draw_menubar),
	(murrine_draw_toolbar), (murrine_draw_list_view_header),
	(murrine_draw_menuitem), (murrine_draw_scrollbar_stepper),
	(murrine_draw_scrollbar_slider), (murrine_draw_selected_cell),
	(murrine_draw_statusbar):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_button),
	(murrine_rgba_draw_entry), (murrine_rgba_draw_progressbar_fill),
	(murrine_rgba_draw_menubar), (murrine_rgba_draw_toolbar),
	(murrine_rgba_draw_tab), (murrine_rgba_draw_scrollbar_stepper),
	(murrine_rgba_draw_scrollbar_slider),
	(murrine_rgba_draw_statusbar):
	TOTAL rewrite of the glaze functions, removed 500 lines of code ;)
	Please TEST! Comparing before/after.

2008-09-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_progressbar_fill),
	(murrine_draw_tab), (murrine_draw_separator),
	(murrine_draw_combo_separator), (murrine_draw_list_view_header),
	(murrine_draw_toolbar), (murrine_draw_menuitem):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_progressbar_fill),
	(murrine_rgba_draw_toolbar):
	Polishing code - Part 2
	Changed (more speed) progressbars borders, please check if the style is
	equal to the old one.

2008-09-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_highlight_and_shade),
	(murrine_draw_button), (murrine_draw_entry),