@@ -149,11 +149,9 @@ murrine_draw_button (cairo_t *cr,
 {
 	double xos = widget->xthickness > 2 ? 1 : 0;
 	double yos = widget->ythickness > 2 ? 1 : 0;
-	MurrineRGB fill = colors->bg[widget->state_type];
-	MurrineRGB border_disabled = colors->shade[5];
-	MurrineRGB border_normal;
-
 	double custom_highlight_ratio = widget->highlight_ratio;
+	MurrineRGB fill = colors->bg[widget->state_type];
+	MurrineRGB border = colors->shade[!widget->disabled ? 6 : 5];
 	MurrineGradients mrn_gradient_custom = widget->mrn_gradient;
 
 	if (widget->disabled)
@@ -165,7 +163,8 @@ murrine_draw_button (cairo_t *cr,
 	if (widget->is_default && !widget->disabled)
 		murrine_mix_color (&fill, &colors->spot[1], 0.2, &fill);
 
-	murrine_shade (&colors->shade[6], 0.95, &border_normal);
+	if (!widget->disabled)
+		murrine_shade (&colors->shade[6], 0.95, &border);
 
 	if (!horizontal)
 		murrine_exchange_axis (cr, &x, &y, &width, &height);
@@ -177,7 +176,7 @@ murrine_draw_button (cairo_t *cr,
 	if (!widget->active && !widget->disabled && widget->reliefstyle > 1)
 	{
 		murrine_rounded_rectangle (cr, xos, yos, width-(xos*2), height-(yos*2), widget->roundness, widget->corners);
-		murrine_set_color_rgba (cr, widget->disabled ? &border_disabled : &border_normal, 0.18);
+		murrine_set_color_rgba (cr, &border, 0.18);
 		cairo_stroke (cr);
 	}
 	else if (widget->reliefstyle != 0)
@@ -185,12 +184,11 @@ murrine_draw_button (cairo_t *cr,
 		                    width-(xos*2)+1, height-(yos*2)+1,
 		                    widget->roundness+1, widget->corners);
 
-	murrine_mix_color (widget->disabled ? &border_disabled : &border_normal , &fill, 0.4,
-	                   widget->disabled ? &border_disabled : &border_normal);
+	murrine_mix_color (&border, &fill, 0.4, &border);
 
 	/* Default button */
-	if (widget->is_default)
-		murrine_shade (&border_normal, 0.8, &border_normal);
+	if (widget->is_default && !widget->disabled)
+		murrine_shade (&border, 0.8, &border);
 
 	/* Draw the bg */
 	murrine_rounded_rectangle_closed (cr, xos+1, yos+1, width-(xos*2)-2, height-(yos*2)-2, widget->roundness, widget->corners);
@@ -265,7 +263,7 @@ murrine_draw_button (cairo_t *cr,
 	}
 
 	/* Draw the border */
-	murrine_set_color_rgb (cr, widget->disabled ? &border_disabled : &border_normal);
+	murrine_set_color_rgb (cr, &border);
 	murrine_rounded_rectangle (cr, xos+0.5, yos+0.5, width-(xos*2)-1, height-(yos*2)-1, widget->roundness, widget->corners);
 	cairo_stroke (cr);
 }
